--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,8 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
-    background: rgb(0, 0, 0);
+    color: aquamarine;
+    background: rgb(83, 71, 128);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
@@ -222,7 +223,11 @@ section.your-active-class .landing__container::after {
     opacity: 1;
     animation: rotate 5s linear 0s infinite forwards reverse;
 }
-
+/* creating an active class that applies to nav items */
+.active{
+    background-color: aqua;
+    
+}
 /* Section Active Styles Keyframe Animations */
 @keyframes rotate {
 	from {
